welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:45: error: not found: value tab
	tab(1) = 1
        ^golomb:46: error: not found: value tab
	tab(2) = 2
        ^golomb:48: error: not found: value k
		k = tab(i)
                ^golomb:49: error: not found: value tab
		if (tab(i) != i-k) {
                    ^golomb:50: error: not found: value tab
			tab(i) = tab(i-1)
                        ^golomb:52: error: not found: value tab
			tab(i) = k + 1
                        ^golomb:55: error: not found: value tab
	return tab(num)
               ^